Bug 223493 - View source doesn't view real source
Summary: View source doesn't view real source
Status: RESOLVED FIXED
Alias: None
Product: kdepim
Classification: Applications
Component: messageviewer (other bugs)
Version First Reported In: 4.5
Platform: Unlisted Binaries Linux
: LO normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: akonadi-ports-regression
Depends on:
Blocks:
 
Reported: 2010-01-19 22:28 UTC by Thomas McGuire
Modified: 2010-01-25 19:05 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas McGuire 2010-01-19 22:28:19 UTC
The "view source" action doesn't really view the source of the message anymore, but the source after being processed by the objecttreeparser.
This is noticeable when the objecttreeparser modifies the mime structure.

It should show the real source of the message, as it is in the storage.
Comment 1 Torgny Nyblom 2010-01-25 19:05:52 UTC
SVN commit 1080139 by tnyblom:

Show the unparsed source when displaying message source.

BUG:223493


 M  +1 -1      viewer_p.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1080139