Show the unparsed source when displaying message source.

BUG:223493

svn path=/trunk/KDE/kdepim/messageviewer/; revision=1080139