messageviewer/viewer_p.cpp
@@ -2278,7 +2278,7 @@ void ViewerPrivate::slotShowMessageSource()
 {
   // ### PORT ME: This is broken: The OTP modifies the source, so this is not
   //              actually the real source
-  QString str = QString::fromAscii( mMessage->encodedContent() );
+  QString str = QString::fromAscii( mMessageItem.payloadData() );
 
   MailSourceViewer *viewer = new MailSourceViewer(); // deletes itself upon close
   viewer->setWindowTitle( i18n("Message as Plain Text") );
